tests/NormalTests/paczka1/small_fuzzy/59242965.err
Error in line 3: v1c4v3 A15 61,1
Error in line 4: hw0cuJ A15 54,9
Error in line 7: hw0cuJ S125 64,8
Error in line 6: v1c4v3 A756 82,8
